# unity-ffi

./: .gitignore  Cargo.toml  LICENSE  README.md
.agent/: 100_ffi.md
.docs/: 001_architecture.md  002_profiler_overview.md  003_profiler_quickstart.md  004_before_after_comparison.md  005_packet_builder_api.md  006_migration_guide.md  007_packet_builder_migration.md  008_unity_sprite_setup.md  009_generate_bindings.md  010_readme_fixes.md  011_packet_validation.md
.handovers/: 001_unity_csharp_auto_generation_implementation.md  002_reorganize_scripts_folder.md  003_repr_c_auto_inject.md
.issues/: 001_complete_unity_csharp_auto_generation.md
.plan/: 001_init.md
.plans/: 002_annotation.md  003_db_flatten.md  004_repr_c_auto_inject.md
crates/game-ffi/: Cargo.toml
crates/game-ffi-derive/: Cargo.toml
crates/game-ffi-derive/src/: lib.rs
crates/game-ffi-derive/src/derive/: attributes.rs  game_component.rs  mod.rs
crates/game-ffi-derive/src/derive/schema/: crud_gen.rs  mod.rs  sql_gen.rs  types.rs
crates/game-ffi-derive/src/derive/unity/: mod.rs
crates/game-ffi-derive/src/derive/unreal/: mod.rs
crates/game-ffi-derive/tests/: game_component_tests.rs
crates/game-ffi/examples/: basic_usage.rs  complex_patterns.rs
crates/game-ffi/src/: lib.rs
crates/game-ffi/src/utils/: mod.rs  uuid.rs
crates/game-ffi/src/utils/validation/: mod.rs
crates/game-ffi/tests/: derive_tests.rs  phase5_complex_patterns.rs
crates/game-server/: Cargo.toml  test_sizes  test_sizes.rs
crates/game-server/src/: main.rs
crates/unity-network/: Cargo.toml  README.md
crates/unity-network/examples/: extract_bindings.rs  extract_layout.rs  extract_uuids.rs  generate_unity_cs.rs  schema_turso.rs
crates/unity-network/src/: lib.rs  packet_builder.rs  sprite_manager.rs  types.rs  webtransport.rs
examples/helloworld-ffi/Assets/: UniversalRenderPipelineGlobalSettings.asset
examples/helloworld-ffi/Assets/Scenes/: SampleScene.unity
examples/helloworld-ffi/Assets/Scripts/: NativeNetworkClient.cs  NetworkPlayer.cs  PacketBuilder.cs
examples/helloworld-ffi/ProjectSettings/: ProjectSettings.asset
scripts/: README.md  build.sh  build_profiler.sh  generate_bindings.sh  quickstart_profiler.sh  rebuild_for_rosetta.sh  run.sh  setup.sh  setup_profiler.sh  teardown.sh
tests/: README.md
tests/test-client/: Cargo.toml
tests/test-client/src/: main.rs
tests/test-ffi-arch/: Cargo.toml
tests/test-ffi-arch/src/: main.rs
tests/test-sprite-lifecycle/: Cargo.toml
tests/test-sprite-lifecycle/src/: main.rs
unity/: NativeNetworkClient.cs
unity/Editor/: GameFFITests.cs  PacketBuilderIntegrationTests.cs
unity/Editor/BuildTools/: BuildAssetBundles.cs  README.md
unity/Profiler/: FpsRamProfiler.cs  FpsRamProfilerBehaviour.cs  FpsRamProfilerOverlay.cs  FpsRamProfilerTests.cs  FpsRamProfilerTypes.cs  NetworkProfiler.cs  NetworkProfilerBehaviour.cs  NetworkProfilerDebugUI.cs  NetworkProfilerExample.cs  NetworkProfilerOverlay.cs  NetworkProfilerTests.cs  NetworkProfilerTypes.cs  README.md  README_FPS_RAM.md
