[workspace]
resolver = "2"
members = [
    "crates/game-ffi",
    "crates/game-ffi-derive",
    "crates/unity-network",
    "crates/game-server",
    "tests/test-client",
    "tests/test-ffi-arch",
    "tests/test-sprite-lifecycle",
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }

# WebTransport networking
wtransport = { version = "0.6", features = ["self-signed", "dangerous-configuration"] }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.6", features = ["v7", "serde"] }
hex = "0.4"
sha2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.70"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
