[package]
name = "game-ffi"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Unified FFI annotation system for game engine integration"
license = "MIT OR Apache-2.0"

[features]
default = ["unity", "unreal"]
unity = []
unreal = []

[dependencies]
# Macro dependencies
syn = { version = "2.0", features = ["full", "extra-traits", "parsing", "printing"] }
quote = "1.0"
proc-macro2 = "1.0"

# Core dependencies
blake3 = "1.8"
uuid = { version = "1.20", features = ["v5", "serde"] }
bytemuck = { version = "1.25", features = ["derive"] }

# Internal proc-macro dependency
game-ffi-derive = { path = "../game-ffi-derive" }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
# Testing
tokio = { workspace = true, features = ["test-util", "macros"] }
rstest = "0.26"
serial_test = "3.4"

# For testing generated code
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
# No build dependencies needed currently

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
